--- a/egs/to_wav/Makefile
+++ b/egs/to_wav/Makefile
@@ -13,7 +13,16 @@ $(output_dir):
 run/runner: | $(output_dir)
 	$(fs-runner) --input $(corpus_dir) --output $(output_dir) --workers $(workers) \
 		--cmd "ffmpeg -y -i {input} -ar 16000 -ac 1 -f wav {output}" \
-		--output-file audio.16.wav --extensions m4a,wav,mp3
+		--output-file audio.16.wav --extensions m4a,wav,mp3,ogg
 .PHONY: run/runner	
+
+run/runner/voxlingua: | $(output_dir)
+	$(MAKE) corpus_dir=$(voxlingua_dir) output_dir=$(output_dir)/voxlingua run/runner
+.PHONY: run/runner/voxlingua	
+
+run/runner/voxpopuli: | $(output_dir)
+	$(MAKE) corpus_dir=$(voxpopuli_dir) output_dir=$(output_dir)/voxpopuli run/runner
+.PHONY: run/runner/voxpopuli
+
 
 .EXPORT_ALL_VARIABLES:
